# canlink-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  rustfmt.toml
.github/workflows/: ci.yml  release-dryrun.yml  release-publish.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
canlink-cli/: Cargo.toml  README.md
canlink-cli/benches/: cli_bench.rs
canlink-cli/src/: error.rs  main.rs  output.rs
canlink-cli/src/commands/: filter.rs  info.rs  isotp.rs  list.rs  mod.rs  monitor.rs  receive.rs  send.rs  validate.rs
canlink-cli/tests/: filter_commands_test.rs  integration_test.rs  monitor_commands_test.rs
canlink-hal/: Cargo.toml  README.md
canlink-hal/benches/: async_bench.rs  capability_bench.rs  filter_bench.rs  performance_bench.rs  queue_bench.rs
canlink-hal/examples/: async_usage.rs  automated_testing.rs  backend_switching.rs  basic_usage.rs  capability_adaptation.rs  connection_monitor.rs  filter_config.rs  hot_reload.rs  message_filtering.rs  mock_testing.rs  periodic_send.rs  queue_overflow.rs
canlink-hal/src/: backend.rs  capability.rs  config.rs  error.rs  hot_reload.rs  lib.rs  logging.rs  message.rs  registry.rs  resource.rs  state.rs  version.rs
canlink-hal/src/filter/: chain.rs  config.rs  id_filter.rs  mod.rs  range_filter.rs  traits.rs
canlink-hal/src/isotp/: channel.rs  config.rs  error.rs  frame.rs  mod.rs  state.rs
canlink-hal/src/monitor/: config.rs  connection.rs  mod.rs  reconnect.rs  state.rs
canlink-hal/src/periodic/: message.rs  mod.rs  scheduler.rs  stats.rs
canlink-hal/src/queue/: bounded.rs  config.rs  mod.rs  policy.rs
canlink-hal/tests/: async_test.rs  backend_switching_e2e_test.rs  backend_trait_test.rs  bounded_test.rs  capability_adaptation_test.rs  capability_test.rs  chain_test.rs  connection_test.rs  filter_integration_test.rs  id_filter_test.rs  isotp_tests.rs  memory_stability_test.rs  periodic_tests.rs  policy_test.rs  range_filter_test.rs  robustness_test.rs
canlink-hal/tests/common/: mod.rs
canlink-hal/tests/integration/: backend_switching_test.rs  mock_testing_test.rs
canlink-mock/: Cargo.toml  README.md
canlink-mock/src/: backend.rs  config.rs  injector.rs  lib.rs  recorder.rs
canlink-mock/tests/: capability_test.rs  error_injection_test.rs  message_verification_test.rs  mock_backend_test.rs  preset_messages_test.rs
canlink-tscan/: Cargo.toml  README.md
canlink-tscan-sys/: Cargo.toml  README.md  build.rs
canlink-tscan-sys/examples/: basic_hardware_test.rs  dll_test.rs
canlink-tscan-sys/src/: bundle.rs  functions.rs  lib.rs  types.rs
canlink-tscan/benches/: abstraction_overhead_bench.rs
canlink-tscan/examples/: backend_test.rs  canfd_test.rs  disconnect_client_stress.rs  hardware_filter_test.rs
canlink-tscan/src/: backend.rs  config.rs  convert.rs  error.rs  lib.rs
canlink-tscan/src/daemon/: client.rs  codec.rs  mod.rs  protocol.rs  server.rs
canlink-tscan/tests/: config_test.rs  daemon_client_test.rs  daemon_protocol_test.rs  daemon_server_test.rs
docs/: api-reference.md  user-guide.md
docs/guides/: hardware-test-guide.md  libtscan-setup-guide.md
docs/release/: 2026-03-18-tscan-daemon-workaround-release-note.md  final-release-checklist.md  release-guide.md  release-quickstart.md  v0.3.0.md
docs/reports/: performance-benchmark-report.md
docs/test-plans/: 2026-03-18-tscan-daemon-hw-regression-checklist.md
examples/: async_usage.rs  basic_usage.rs  capability_query.rs  cli_usage.sh  error_handling.rs  filter_config.rs  isotp_transfer.rs  multi_threaded.rs  obd2_diagnostics.rs
scripts/: check.bat  check.sh  check_doc_coverage.py  guard_vendor_bundle.py  release.bat  release.sh  tscan_hw_regression.bat
specs/001-tsmaster-canfd-support/: spec.md
specs/001-tsmaster-canfd-support/checklists/: requirements.md
specs/002-can-hardware-abstraction/: ANALYSIS_REPORT.md  CONTRACT_VERIFICATION_REPORT.md  IMPROVEMENTS.md  SPECIFICATION_IMPROVEMENTS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-can-hardware-abstraction/checklists/: release-gate.md  requirements.md
specs/002-can-hardware-abstraction/contracts/: backend-registry.md  backend-trait.md
specs/003-async-and-filtering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-async-and-filtering/checklists/: requirements.md
specs/003-async-and-filtering/contracts/: connection-monitor.md  filter-trait.md  queue-policy.md
specs/004-periodic-and-isotp/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-periodic-and-isotp/checklists/: comprehensive.md
specs/004-periodic-and-isotp/contracts/: isotp.rs  periodic.rs
specs/005-tscan-isolation-workaround/: plan.md  research.md  spec.md
specs/006-cli-production-boundary/: plan.md  spec.md  tasks.md
specs/006-cli-production-boundary/checklists/: requirements.md
specs/007-release-vendor-guard/: spec.md
specs/008-docs-bilingual/: plan.md  spec.md
