[package]
name = "canlink-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for CAN hardware abstraction layer"
keywords = ["can", "canfd", "cli", "automotive"]
categories = ["command-line-utilities", "embedded"]

[[bin]]
name = "canlink"
path = "src/main.rs"

[dependencies]
canlink-hal = { version = "0.2.0", path = "../canlink-hal", features = ["periodic", "isotp"] }
canlink-mock = { version = "0.2.0", path = "../canlink-mock", features = ["async-tokio"] }
canlink-tscan = { version = "0.2.0", path = "../canlink-tscan" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "cli_bench"
harness = false
