[package]
name = "canlink-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for CAN hardware abstraction layer"
readme = "README.md"
keywords = ["can", "canfd", "cli", "automotive"]
categories = ["command-line-utilities", "embedded"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[[bin]]
name = "canlink"
path = "src/main.rs"

[dependencies]
canlink-hal = { version = "0.3.0", path = "../canlink-hal", features = ["periodic"] }
canlink-tscan = { version = "0.3.0", path = "../canlink-tscan" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = { workspace = true }
toml = { workspace = true }

